--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,8 @@
     backface-visibility: hidden;
     animation: flip-left 1s ease-in-out;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   
   
